# Crop-Disease-Detection-Bot

./: README.md  app.py  pyproject.toml  requirements.txt  run_server.sh  start.sh  start_app.sh  test_model.py
login/: app.js  login.html  style.css
src/: dict.py  model.py
static/: language.js  script1.js  script1_new.js  style1.css
static/lang/: en.json  en_new.json  hi.json  hi_new.json  mr.json  mr_new.json
templates/: upload.html  upload_corrupted.html  upload_new.html
